--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=demo
-my_api_key=cu79fmpr01qkuccsfocgcu79fmpr01qkuccsfod0
+my_api_key=cu8hf5hr01qt63vh0oq0cu8hf5hr01qt63vh0oqg
+jwt.secret=your_very_long_random_secure_key_here
+alphavantage.api.key=1MWUJFRDJXYC6D0Y
 
 spring.datasource.url=jdbc:mysql://localhost:3306/tracker
 spring.datasource.username=root
