--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,13 +1,17 @@
 spring.application.name=demo
-my_api_key=cu8hf5hr01qt63vh0oq0cu8hf5hr01qt63vh0oqg
-jwt.secret=your_very_long_random_secure_key_here
+my_api_key=cuauim9r01qof06jecggcuauim9r01qof06jech0
+jwt.secret=your_secret_key_your_secret_key_your_secret_key
 alphavantage.api.key=1MWUJFRDJXYC6D0Y
 
 spring.datasource.url=jdbc:mysql://localhost:3306/tracker
-spring.datasource.username=root
-spring.datasource.password=hi
+spring.datasource.username=user
+spring.datasource.password=User@1234
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+
+
+
 
